syntax = "proto3";
package mmn;
option go_package = "mmn/proto;proto";
import "proto/tx.proto";

message Entry {
  uint64 num_hashes = 1;
  bytes hash       = 2;
  repeated bytes transactions = 3;
  repeated string tx_hashes = 4;
}
message AccountData {
  string address = 1;
  uint64 balance = 2;
  uint64 nonce   = 3;
} 
message TransactionData {
  string tx_hash = 1;
  string sender    = 2; // sender address
  string recipient = 3; // recipient address
  uint64 amount    = 4; // amount
  uint64 nonce     = 5; // nonce
  uint64 timestamp = 6;
  TransactionStatus status = 7;
  AccountData sender_account = 8;
  AccountData recipient_account = 9;
}


message Block {
  uint64 slot     = 1;
  bytes prev_hash = 2;
  repeated Entry entries = 3;
  string leader_id = 4;
  uint64 timestamp = 5;
  bytes hash = 6;
  bytes signature  = 7;
  repeated TransactionData transaction_data = 8;
}

message BroadcastResponse {
  bool ok      = 1;
  string error = 2;
}

message SubscribeRequest {
  string follower_id = 1;
}

message EmptyParams {}

message GetBlockByNumberRequest {
  repeated uint64 block_numbers = 1;
}

message GetBlockNumberResponse {
  uint64 block_number = 1;
}

message GetBlockByNumberResponse {
  repeated Block blocks = 1;   
  string error = 3; 
}

service BlockService {
  rpc Broadcast(Block) returns (BroadcastResponse);
  rpc Subscribe(SubscribeRequest) returns (stream Block);
  rpc GetBlockNumber(EmptyParams) returns (GetBlockNumberResponse);
  rpc GetBlockByNumber(GetBlockByNumberRequest) returns (GetBlockByNumberResponse);
}
